crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__github_issue_15681_fix_test.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC003 [*] Move standard library import `pathlib` into a type-checking block
 --> <filename>:4:8
  |
2 | from __future__ import annotations
3 |
4 | import pathlib  # TC003
  |        ^^^^^^^
5 |
6 | TYPE_CHECKING = False
help: Move into type-checking block
  |
3 |
  - import pathlib  # TC003
4 |
5 | TYPE_CHECKING = False
6 | if TYPE_CHECKING:
7 +     import pathlib
8 |     from types import TracebackType
  |
note: This is an unsafe fix and may change runtime behavior
