crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__import_from.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC002 [*] Move third-party import `pandas.DataFrame` into a type-checking block
 --> <filename>:5:5
  |
4 | from pandas import (
5 |     DataFrame,  # DataFrame
  |     ^^^^^^^^^
6 |     Series,  # Series
7 | )
help: Move into type-checking block
   |
4  | from pandas import (
   -     DataFrame,  # DataFrame
5  |     Series,  # Series
6  | )
7  + from typing import TYPE_CHECKING
8  +
9  + if TYPE_CHECKING:
10 +     from pandas import (
11 +         DataFrame,  # DataFrame
12 +         )
13 |
   |
note: This is an unsafe fix and may change runtime behavior
