crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__import_from_type_checking_block.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC002 [*] Move third-party import `pandas.DataFrame` into a type-checking block
 --> <filename>:7:5
  |
6 | from pandas import (
7 |     DataFrame,  # DataFrame
  |     ^^^^^^^^^
8 |     Series,  # Series
9 | )
help: Move into type-checking block
   |
6  | from pandas import (
   -     DataFrame,  # DataFrame
7  |     Series,  # Series
8  | )
9  |
10 | if TYPE_CHECKING:
11 +     from pandas import (
12 +         DataFrame,  # DataFrame
13 +         )
14 |     import os
   |
note: This is an unsafe fix and may change runtime behavior
