crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__multiple_modules_same_type.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC003 [*] Move standard library import `os` into a type-checking block
 --> <filename>:6:8
  |
4 | from typing import TYPE_CHECKING
5 |
6 | import os, sys
  |        ^^
7 |
8 | def f(x: os, y: sys):
help: Move into type-checking block
   |
5  |
   - import os, sys
6  |
7  + if TYPE_CHECKING:
8  +     import os, sys
9  +
10 | def f(x: os, y: sys):
   |
note: This is an unsafe fix and may change runtime behavior

TC003 [*] Move standard library import `sys` into a type-checking block
 --> <filename>:6:12
  |
4 | from typing import TYPE_CHECKING
5 |
6 | import os, sys
  |            ^^^
7 |
8 | def f(x: os, y: sys):
help: Move into type-checking block
   |
5  |
   - import os, sys
6  |
7  + if TYPE_CHECKING:
8  +     import os, sys
9  +
10 | def f(x: os, y: sys):
   |
note: This is an unsafe fix and may change runtime behavior
